[project]
name = "agentic-ai-langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.65",
    "gradio-client>=2.3.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.11",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
